# cmake-avr-example

./: .clang-format  CMakeLists.txt
src/: main.cpp
